force-app/main/default/objects/Product_Order__c/Product_Order__c.object-meta.xml
<CustomObject>
    <label>Product Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>