force-app/main/default/objects/Product_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Orders</relationshipLabel>
    <relationshipName>Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>