force-app/main/default/objects/Product_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Widget</fullName>
            </value>
            <value>
                <fullName>Medium Widget</fullName>
            </value>
            <value>
                <fullName>Large Widget</fullName>
            </value>
            <value>
                <fullName>Trombone</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>